Fix wrapping issue (hack for now)

--- a/Section3-DeepDive/main.css
+++ b/Section3-DeepDive/main.css
@@ -40,7 +40,7 @@ body {
 .main-nav {
     display: inline-block;
     text-align: right;
-    width: calc(100% - 79px);
+    width: calc(100% - 74px);
 }
 
 .main-nav__items {
